--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
     "clean": "tsc --build --clean"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "@types/express": "^4.17.17",
-    "typescript": "^5.0.4",
-    "@types/node": "^18.15.11",
-    "ts-node": "^10.9.1",
-    "prisma": "^4.12.0",
-    "@prisma/client": "^4.12.0"
+    "express": "latest",
+    "@types/express": "latest",
+    "typescript": "latest",
+    "@types/node": "latest",
+    "ts-node": "latest",
+    "prisma": "latest",
+    "@prisma/client": "latest"
   },
   "devDependencies": {
-    "npm-check-updates": "^16.10.7"
+    "npm-check-updates": "latest"
   }
 }
