--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@types/node": "latest",
     "ts-node": "latest",
     "prisma": "latest",
-    "@prisma/client": "latest"
+    "@prisma/client": "latest",
+    "cors": "latest"
   },
   "devDependencies": {
     "npm-check-updates": "latest"
