--- a/package.json
+++ b/package.json
@@ -11,24 +11,22 @@
     "clean": "tsc --build --clean"
   },
   "dependencies": {
-    "express": "latest",
-    "@types/express": "latest",
-    "typescript": "latest",
-    "@types/node": "latest",
-    "prisma": "latest",
-    "@prisma/client": "latest",
-    "cors": "latest",
-    "commander": "latest"
-  },
-  "devDependencies": {
-    "ts-node": "latest",
-    "pkg": "latest",
-    "chalk": "latest"
+    "@prisma/client": "^5.1.1",
+    "@types/express": "^4.17.17",
+    "@types/node": "^20.4.8",
+    "chalk": "^5.3.0",
+    "commander": "^11.0.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "npm-check-updates": "^16.10.17",
+    "pkg": "^5.8.1",
+    "prisma": "^5.1.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6"
   },
   "bin": "main.js",
   "pkg": {
-    "scripts": [
-    ],
+    "scripts": [],
     "assets": [
       "node_modules/.prisma/**/*"
     ],
