--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "final-money",
+  "name": "moneybookserver",
   "version": "1.0.0",
-  "description": "final-money backend",
+  "description": "money book server",
   "main": "main.ts",
   "scripts": {
-    "generate": "prisma generate --generator client-native",
-    "push": "prisma db push --skip-generate",
+    "db_generate": "prisma generate --generator client-native",
+    "db_push": "prisma db push --skip-generate",
     "start": "ts-node main",
     "build": "ts-node build",
     "clean": "tsc --build --clean"
@@ -15,7 +15,6 @@
     "commander": "^11.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "pkg": "^5.8.1",
     "prisma": "^5.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6"
@@ -24,9 +23,9 @@
     "@types/express": "^4.17.17",
     "@types/node": "^20.4.9",
     "@types/cors": "^2.8.13",
+    "pkg": "^5.8.1",
     "npm-check-updates": "^16.10.18"
   },
-  "bin": "main.js",
   "pkg": {
     "scripts": [],
     "assets": [
@@ -38,5 +37,6 @@
       "latest-linux-x64"
     ],
     "outputPath": "dist"
-  }
+  },
+  "bin": "main.js"
 }
