--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "money book backend server",
   "main": "main.ts",
   "scripts": {
-    "db_generate": "prisma generate --generator client-native",
-    "db_push": "prisma db push --skip-generate",
-    "start": "ts-node main",
+    "prisma_generate": "prisma generate --generator client-native",
+    "prisma_push": "prisma db push --skip-generate",
+    "dev": "ts-node main -db mysql://root:root@localhost:3306/moneybook",
     "build": "ts-node build",
     "clean": "tsc --build --clean"
   },
