--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "targets": [
       "latest-win-x64",
       "latest-macos-x64",
-      "latest-linux-x64"
+      "latest-linux-x64",
+      "latest-linux-arm64"
     ],
     "outputPath": "dist"
   },
