--- a/package.json
+++ b/package.json
@@ -33,9 +33,12 @@
     ],
     "targets": [
       "latest-win-x64",
+      "latest-win-arm64",
       "latest-macos-x64",
+      "latest-macos-arm64",
       "latest-linux-x64",
-      "latest-linux-arm64"
+      "latest-linux-arm64",
+      "latest-linux-armv7"
     ],
     "outputPath": "dist"
   },
