--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
       "latest-macos-x64",
       "latest-macos-arm64",
       "latest-linux-x64",
-      "latest-linux-arm64",
-      "latest-linux-armv7"
+      "latest-linux-arm64"
     ],
     "outputPath": "dist"
   },
