--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,67 +1,73 @@
-name: Build and Release
+name: Build and Release and Clean
 
 on:
+  #  push:
+  #    branches:
+  #      - main
+  #      - master
+  #    paths-ignore:
+  #      - 'docs/**'
+  #      - '.github/**'
+  #      - '**.md'
+  #      - 'LICENSE'
+  #  pull_request:
+  #    branches:
+  #      - main
+  #      - master
+  #    paths-ignore:
+  #      - 'docs/**'
+  #      - '.github/**'
+  #      - '**.md'
+  #      - 'LICENSE'
   workflow_dispatch:
     inputs:
-      version:
-        description: 'version'
+      tag:
+        description: 'tag'
         required: false
         default: 'latest'
-        # use ${{ github.event.inputs.version }}
+        # use ${{ github.event.inputs.tag }}
 
 jobs:
-  build:
+  job1:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+
+      - name: Setup golang
+        uses: actions/setup-go@v4
+        with:
+          go-version: 'stable'
 
       - name: Setup Node.js environment
-        uses: actions/setup-node@v2.5.2
+        uses: actions/setup-node@v4
         with:
-          node-version: 18
-
-      - name: Build
-        run: |
-          npm install
-          npm run build
-
-          # 显示文件路径(debug)
-          # ls .. -R -las
-
-          # 获取sha256 checksum
-          sha256sum dist/* > dist/SHA256SUMS.txt
+          node-version: *
 
       - name: Remove old Releases
-        uses: dev-drprasad/delete-older-releases@v0.2.1
+        uses: dev-drprasad/delete-older-releases@v0.3.2
         with:
           keep_latest: 0
           delete_tags: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v2
-        with:
-          name: build_files
-          path: dist/*
-
-  release:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Download all artifacts
-        uses: actions/download-artifact@v2
-        with:
-          name: build_files
-          path: dist
+      - name: Build
+        run: |
+          # 获取sha256 checksum
+          sha256sum bin/* > bin/SHA256SUMS.txt
 
       - name: Release
-        uses: ncipollo/release-action@v1.12.0
+        uses: ncipollo/release-action@v1
         with:
-          artifacts: "dist/*"
-          tag: 'latest'
+          artifacts: "bin/*"
+          tag: ${{ env.VERSION }}
           token: ${{ secrets.GITHUB_TOKEN }}
+          generateReleaseNotes: true
+          removeArtifacts: true
+          replacesArtifacts: true
+
+      - name: Remove old artifacts
+        uses: c-hive/gha-remove-artifacts@v1
+        with:
+          age: "0s"
