--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,7 +42,7 @@ jobs:
       - name: Setup Node.js environment
         uses: actions/setup-node@v4
         with:
-          node-version: *
+          node-version: '*'
 
       - name: Remove old Releases
         uses: dev-drprasad/delete-older-releases@v0.3.2
