--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,7 +61,7 @@ jobs:
         uses: ncipollo/release-action@v1
         with:
           artifacts: "bin/*"
-          tag: ${{ env.VERSION }}
+          tag: "latest"
           token: ${{ secrets.GITHUB_TOKEN }}
           generateReleaseNotes: true
           removeArtifacts: true
