--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "prisma_generate": "prisma generate --generator client-native",
     "prisma_push": "prisma db push --skip-generate",
-    "start": "ts-node main -db mysql://root:root@localhost:3306/moneybook",
+    "start": "ts-node main",
     "build": "ts-node build",
     "clean": "tsc --build --clean"
   },
@@ -14,15 +14,15 @@
     "@prisma/client": "^5.7.1",
     "commander": "^11.1.0",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.10.5",
+    "npm-check-updates": "^16.14.12",
     "prisma": "^5.7.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/node": "^20.10.5",
-    "@types/cors": "^2.8.17",
-    "npm-check-updates": "^16.14.12"
   }
 }
