--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "money book backend server",
   "main": "main.ts",
   "scripts": {
-    "prisma_generate": "prisma generate --generator client-native",
-    "prisma_push": "prisma db push --skip-generate",
+    "prisma:generate": "prisma generate --generator client-native",
+    "prisma:push": "prisma db push --skip-generate",
     "start": "ts-node main",
     "build": "ts-node build",
     "clean": "tsc --build --clean"
@@ -20,6 +20,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.5",
+    "@vercel/ncc": "^0.38.1",
     "npm-check-updates": "^16.14.12",
     "prisma": "^5.7.1",
     "ts-node": "^10.9.2",
