--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "prisma:generate": "prisma generate --generator client-native",
     "prisma:push": "prisma db push --skip-generate",
     "start": "ts-node main",
-    "build": "ts-node build",
+    "build": "node build",
     "clean": "tsc --build --clean"
   },
   "dependencies": {
