--- a/.gitignore
+++ b/.gitignore
@@ -710,3 +710,5 @@ FodyWeavers.xsd
 # Additional files built by Visual Studio
 
 # End of https://www.toptal.com/developers/gitignore/api/jetbrains+all,visualstudio,visualstudiocode,node,windows,macos,linux
+
+package-lock.json
