--- a/.gitignore
+++ b/.gitignore
@@ -712,3 +712,4 @@ FodyWeavers.xsd
 # End of https://www.toptal.com/developers/gitignore/api/jetbrains+all,visualstudio,visualstudiocode,node,windows,macos,linux
 
 package-lock.json
+pnpm-lock.yaml
