--- a/package.json
+++ b/package.json
@@ -6,24 +6,25 @@
   "scripts": {
     "prisma:generate": "prisma generate --generator client-native",
     "prisma:push": "prisma db push --skip-generate",
+    "init": "npx -y pnpm update && npx -y pnpm install",
     "start": "ts-node main",
     "build": "node build",
     "clean": "tsc --build --clean"
   },
   "dependencies": {
-    "@prisma/client": "^5.12.1",
-    "commander": "^12.0.0",
+    "@prisma/client": "^5.16.1",
+    "commander": "^12.1.0",
     "cors": "^2.8.5",
     "express": "^4.19.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/node": "^20.12.7",
+    "@types/node": "^20.14.10",
     "@vercel/ncc": "^0.38.1",
-    "npm-check-updates": "^16.14.18",
-    "prisma": "^5.12.1",
+    "pnpm": "^9.5.0",
+    "prisma": "^5.16.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.5.3"
   }
 }
