--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "description": "money book backend server",
   "main": "main.ts",
   "scripts": {
-    "prisma:generate": "prisma generate --generator client-native",
-    "prisma:push": "prisma db push --skip-generate",
     "init": "npx -y pnpm install",
     "update": "npx -y pnpm update",
+    "prisma:generate": "prisma generate --generator client",
+    "prisma:push": "prisma db push",
     "start": "ts-node main",
     "build": "node build",
     "clean": "tsc --build --clean"
   },
   "dependencies": {
-    "@prisma/client": "^5.16.1",
+    "@prisma/client": "^5.16.2",
     "commander": "^12.1.0",
     "cors": "^2.8.5",
     "express": "^4.19.2"
@@ -24,7 +24,7 @@
     "@types/node": "^20.14.10",
     "@vercel/ncc": "^0.38.1",
     "pnpm": "^9.5.0",
-    "prisma": "^5.16.1",
+    "prisma": "^5.16.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.3"
   }
