--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,7 +40,7 @@ jobs:
           node-version: '*'
 
       - name: Remove old Releases
-        uses: dev-drprasad/delete-older-releases@v0.3.2
+        uses: dev-drprasad/delete-older-releases@v0.3.4
         with:
           keep_latest: 0
           delete_tags: true
@@ -54,7 +54,7 @@ jobs:
           # 删除拷贝错误的查询引擎文件
           rm -rf dist/client
           # 拷贝所有的查询引擎文件
-          cp node_modules/.prisma/client/*.node dist
+          cp node_modules/prisma/*.node dist
           # 压缩
           zip -9 moneybook.zip dist/*
           
