--- a/package.json
+++ b/package.json
@@ -8,24 +8,24 @@
     "update": "npx -y pnpm update",
     "prisma:generate": "prisma generate --generator client",
     "prisma:push": "prisma db push",
-    "start": "ts-node main -db mysql://root:root@localhost:3306/moneybook",
+    "start": "ts-node main -db file:./moneybook.db",
     "build": "node build",
     "clean": "tsc --build --clean"
   },
   "dependencies": {
-    "@prisma/client": "^5.22.0",
+    "@prisma/client": "^6.4.1",
     "commander": "^12.1.0",
     "cors": "^2.8.5",
-    "express": "^4.21.1"
+    "express": "^4.21.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/node": "^20.17.6",
+    "@types/node": "^20.17.19",
     "@vercel/ncc": "^0.38.3",
-    "pnpm": "^9.13.2",
-    "prisma": "^5.22.0",
+    "pnpm": "^10.4.1",
+    "prisma": "^6.4.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.3"
+    "typescript": "^5.7.3"
   }
 }
