--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "update": "npx -y pnpm update",
     "prisma:generate": "prisma generate --generator client",
     "prisma:push": "prisma db push",
-    "start": "ts-node main -db file:./moneybook.db",
+    "start": "ts-node main -db mysql://root:root@localhost:3306/moneybook",
     "build": "node build",
     "clean": "tsc --build --clean"
   },
   "dependencies": {
-    "@prisma/client": "^6.4.1",
+    "@prisma/client": "^6.5.0",
     "commander": "^12.1.0",
     "cors": "^2.8.5",
     "express": "^4.21.2"
@@ -21,11 +21,11 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/node": "^20.17.19",
+    "@types/node": "^20.17.28",
     "@vercel/ncc": "^0.38.3",
-    "pnpm": "^10.4.1",
-    "prisma": "^6.4.1",
+    "pnpm": "^10.7.0",
+    "prisma": "^6.5.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.7.3"
+    "typescript": "^5.8.2"
   }
 }
