--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,7 @@ on:
       - '.git**'
       - '**.md'
       - 'LICENSE'
+      - 'service/**'
   pull_request:
     branches:
       - main
@@ -21,6 +22,7 @@ on:
       - '.git**'
       - '**.md'
       - 'LICENSE'
+      - 'service/**'
   workflow_dispatch:
     inputs:
       tag:
