--- a/package.json
+++ b/package.json
@@ -8,24 +8,24 @@
     "update": "npx -y pnpm update",
     "prisma:generate": "prisma generate --generator client",
     "prisma:push": "prisma db push",
-    "start": "ts-node main -db mysql://root:root@localhost:3306/moneybook",
+    "start": "ts-node main -d mysql://root:root@localhost:3306/moneybook",
     "build": "node build",
     "clean": "tsc --build --clean"
   },
   "dependencies": {
-    "@prisma/client": "^6.11.0",
-    "commander": "^12.1.0",
+    "@prisma/client": "^6.15.0",
+    "commander": "^14.0.0",
     "cors": "^2.8.5",
-    "express": "^4.21.2"
+    "express": "^5.1.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
-    "@types/express": "^4.17.23",
-    "@types/node": "^20.19.4",
+    "@types/express": "^5.0.3",
+    "@types/node": "^24.3.1",
     "@vercel/ncc": "^0.38.3",
-    "pnpm": "^10.12.4",
-    "prisma": "^6.11.0",
+    "pnpm": "^10.15.1",
+    "prisma": "^6.15.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+    "typescript": "^5.9.2"
   }
 }
