--- a/.github/workflows/Build + Release.yml
+++ b/.github/workflows/Build + Release.yml
@@ -22,38 +22,24 @@ jobs:
   job1:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
+      - name: checkout
         uses: actions/checkout@main
 
-      - name: Setup Node.js environment
+      - name: setup nodejs
         uses: actions/setup-node@main
         with:
-          node-version: '*'
+          node-version: 'latest'
 
-      - name: Remove old Releases
-        uses: dev-drprasad/delete-older-releases@main
-        with:
-          keep_latest: 0
-          delete_tags: true
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Build
+      - name: processing
         run: |
+          # building and compressing
           npm run build
           tar -zcvf "./moneybook.tar.gz" -C "dist" index.js
 
-      - name: Release
-        uses: ncipollo/release-action@main
-        with:
-          artifacts: "moneybook.tar.gz"
-          tag: "latest"
-          token: ${{ secrets.GITHUB_TOKEN }}
-          generateReleaseNotes: true
-          removeArtifacts: true
-          replacesArtifacts: true
+          # delete all releases and their tags
+          gh release list | awk -F '\t' '{print $3}' | while read -r line; do gh release delete --yes --cleanup-tag "$line"; done
 
-      - name: Remove old artifacts
-        uses: c-hive/gha-remove-artifacts@latest
-        with:
-          age: "0s"
+          # create release
+          gh release create "latest" --generate-notes "./moneybook.tar.gz"
+
+          echo ${{ inputs.version }}
