--- a/.github/workflows/Build + Release.yml
+++ b/.github/workflows/Build + Release.yml
@@ -31,6 +31,8 @@ jobs:
           node-version: 'latest'
 
       - name: processing
+        env:
+          GH_TOKEN: ${{ github.token }}
         run: |
           # building and compressing
           npm run build
