Update Build + Release.yml

--- a/.github/workflows/Build + Release.yml
+++ b/.github/workflows/Build + Release.yml
@@ -47,10 +47,10 @@ jobs:
 
           echo "${{ inputs.version }}"
 
-          if [ "${{ inputs.version }}" != "" ]; then
+          if [ "${{ inputs.version }}" == "" ]; then
             echo 1
             echo "${{ inputs.version }}"
-          elif [ "${{ inputs.version }}" != null ]; then
+          elif [ "${{ inputs.version }}" == null ]; then
             echo 2
             echo "${{ inputs.version }}"
           else
