--- a/.github/workflows/Build + Release.yml
+++ b/.github/workflows/Build + Release.yml
@@ -16,7 +16,6 @@ on:
         description: 'release version'
         required: false
         default: 'latest'
-        # use ${{ inputs.version }}
 
 jobs:
   job1:
@@ -42,18 +41,9 @@ jobs:
           gh release list | awk -F '\t' '{print $3}' | while read -r line; do gh release delete --yes --cleanup-tag "$line"; done
 
           # create release
-          gh release create "latest" --generate-notes "./moneybook.tar.gz"
-
-
-          echo "${{ inputs.version }}"
-
-          if [ "${{ inputs.version }}" == "" ]; then
-            echo 1
-            echo "${{ inputs.version }}"
-          elif [ "${{ inputs.version }}" == null ]; then
-            echo 2
-            echo "${{ inputs.version }}"
+          if [ "${{ inputs.version }}" != "" ]; then
+            tag="${{ inputs.version }}"
           else
-            echo 3
-            echo "${{ inputs.version }}"
+            tag=latest
           fi
+          gh release create "$tag" --generate-notes "./moneybook.tar.gz"
