--- a/.github/workflows/Build + Release.yml
+++ b/.github/workflows/Build + Release.yml
@@ -35,6 +35,9 @@ jobs:
         run: |
           # building and compressing
           npm run build
+          if [ -n "$(ls -A prisma/generated/client/*.node)" ]; then
+            cp prisma/generated/client/*.node dist
+          fi
           tar -zcvf "./moneybook.tar.gz" -C "dist" $(ls -A dist)
 
           # delete all releases and their tags
@@ -44,6 +47,6 @@ jobs:
           if [ "${{ inputs.version }}" != "" ]; then
             tag="${{ inputs.version }}"
           else
-            tag=latest
+            tag="$(node -p "require('./package.json').version")"
           fi
           gh release create "$tag" --generate-notes "./moneybook.tar.gz"
